--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,10 +30,17 @@
             {% endif %}
         {% endif %}
 
-        {% if site.resume == true %}
+        {% if site.cv == true %}
             <li class="item">
-                <a class="link" href="{% if site.resume-external %}{{ site.resume-url }}{% else %}{{ site.url }}/{{ site.resume-url }}{% endif %}">CV</a>
+                <a class="link" href="{% if site.cv-external %}{{ site.cv-url }}{% else %}{{ site.url }}/{{ site.cv-url }}{% endif %}">CV</a>
             </li>
         {% endif %}
+        
+        {% if site.impression == true %}
+            <li class="item">
+                <a class="link" href="{{ site.url }}/impression">Impression</a>
+            </li>
+        {% endif %}
+
     </ul>
 </nav>
