--- a/message/style.css
+++ b/message/style.css
@@ -18,6 +18,10 @@ input {
     text-align: center;
 }
 
+.container > img {
+    width: 100%;
+}
+
 .title {
     display: block;
     font-weight: 900;
@@ -28,8 +32,12 @@ input {
 }
 
 @keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 .input {
@@ -77,7 +85,7 @@ textarea {
     font-weight: bold;
     font-size: 20px;
     line-height: 27px;
-    
+
     animation: fadein 2s;
 }
 
@@ -114,12 +122,12 @@ textarea {
     border-radius: 48px;
 }
 
-.button-wrapper{
+.button-wrapper {
     display: block;
     text-align: right;
 }
 
-.send-more-button{
+.send-more-button {
     margin-top: 8px;
     display: inline-block;
     padding: 16px;
